--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <!--   Leaflet Location Control   -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     
     <!-- FontAwesome Kit Here! -->
     <script src="https://kit.fontawesome.com/7c5a29636b.js" crossorigin="anonymous"></script>
